; ModuleID = '/home/carl/AnghaBench/git/extr_upload-pack.c_parse_want_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_upload-pack.c_parse_want_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packet_writer = type { i32 }
%struct.string_list = type { i32 }
%struct.object_array = type { i32 }
%struct.object_id = type { i32 }
%struct.string_list_item = type { i32 }
%struct.object = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"want-ref \00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"unknown ref %s\00", align 1
@WANTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.packet_writer*, i8*, %struct.string_list*, %struct.object_array*)* @parse_want_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_want_ref(%struct.packet_writer* %0, i8* %1, %struct.string_list* %2, %struct.object_array* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.packet_writer*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.string_list*, align 8
  %9 = alloca %struct.object_array*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.object_id, align 4
  %12 = alloca %struct.string_list_item*, align 8
  %13 = alloca %struct.object*, align 8
  store %struct.packet_writer* %0, %struct.packet_writer** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.string_list* %2, %struct.string_list** %8, align 8
  store %struct.object_array* %3, %struct.object_array** %9, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i64 @skip_prefix(i8* %14, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %10)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %52

17:                                               ; preds = %4
  %18 = load i8*, i8** %10, align 8
  %19 = call i64 @read_ref(i8* %18, %struct.object_id* %11)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %17
  %22 = load %struct.packet_writer*, %struct.packet_writer** %6, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = call i32 @packet_writer_error(%struct.packet_writer* %22, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @die(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %25)
  br label %27

27:                                               ; preds = %21, %17
  %28 = load %struct.string_list*, %struct.string_list** %8, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = call %struct.string_list_item* @string_list_append(%struct.string_list* %28, i8* %29)
  store %struct.string_list_item* %30, %struct.string_list_item** %12, align 8
  %31 = call i32 @oiddup(%struct.object_id* %11)
  %32 = load %struct.string_list_item*, %struct.string_list_item** %12, align 8
  %33 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  %34 = load i8*, i8** %10, align 8
  %35 = call %struct.object* @parse_object_or_die(%struct.object_id* %11, i8* %34)
  store %struct.object* %35, %struct.object** %13, align 8
  %36 = load %struct.object*, %struct.object** %13, align 8
  %37 = getelementptr inbounds %struct.object, %struct.object* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @WANTED, align 4
  %40 = and i32 %38, %39
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %51, label %42

42:                                               ; preds = %27
  %43 = load i32, i32* @WANTED, align 4
  %44 = load %struct.object*, %struct.object** %13, align 8
  %45 = getelementptr inbounds %struct.object, %struct.object* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = or i32 %46, %43
  store i32 %47, i32* %45, align 4
  %48 = load %struct.object*, %struct.object** %13, align 8
  %49 = load %struct.object_array*, %struct.object_array** %9, align 8
  %50 = call i32 @add_object_array(%struct.object* %48, i32* null, %struct.object_array* %49)
  br label %51

51:                                               ; preds = %42, %27
  store i32 1, i32* %5, align 4
  br label %53

52:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %53

53:                                               ; preds = %52, %51
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i64 @skip_prefix(i8*, i8*, i8**) #1

declare dso_local i64 @read_ref(i8*, %struct.object_id*) #1

declare dso_local i32 @packet_writer_error(%struct.packet_writer*, i8*, i8*) #1

declare dso_local i32 @die(i8*, i8*) #1

declare dso_local %struct.string_list_item* @string_list_append(%struct.string_list*, i8*) #1

declare dso_local i32 @oiddup(%struct.object_id*) #1

declare dso_local %struct.object* @parse_object_or_die(%struct.object_id*, i8*) #1

declare dso_local i32 @add_object_array(%struct.object*, i32*, %struct.object_array*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
